# example_py

./: CONTRIBUTING.md  Dockerfile  LICENSE-MIT  Makefile  README.md  cliff.toml  compose.yml  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: development.md
tests/: test_example.py
