[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example-py"
version = "0.0.1"
description = "Example of Python GitHub template"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "x-pt" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
]

[project.urls]
Documentation = "https://github.com/x-pt/example-py#readme"
Issues = "https://github.com/x-pt/example-py/issues"
Source = "https://github.com/x-pt/example-py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra", # show all captured stdout/stderr
    "-q", # quiet
    "--cov=example-py", # report coverage of example-py
    "--cov-report=term-missing", # show missing coverage
    "--cov-report=html", # generate html coverage report
    "--cov-report=lcov", # generate lcov coverage report
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source_pkgs = ["example-py", "tests"]
branch = true
parallel = true
omit = [
    "*/.venv/*"
]

[tool.coverage.paths]
example-py = ["src/example-py"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true  # Show missing lines in the report
precision = 2  # Number of decimal places to use when rounding
